--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -1,5 +1,6 @@
 {#Указываем какой общий шаблон мы будем использовать для каждой страницы#}
 {% extends 'main/base.html' %}
+{#Добавляем статику#}
 {% load static %}
 
 {#Подключаем css-стили для footer#}
@@ -9,7 +10,10 @@
 
 {#Добавляем контент для главной страницы#}
 {% block content %}
-    <h1 class="mt-5 pt-5"><strong>{{ content }}</strong></h1>
+    <div class="mt-5 pt-5 bg-white custom-shadow rounded">
+        <h2 class="m-2"><strong>{{ content }}</strong></h2>
+        <p class="m-2">{{ text_on_page }}</p>
+    </div>
 {% endblock %}
 
 {#Добавляем футер для главной страницы#}
