--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -11,6 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'deps/css/bootstrap/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'deps/css/my_css.css' %}">
+    <link rel="stylesheet" href="{% static 'deps/css/my_footer_css.css' %}">
     <!-- Блок для стилей footer-a для главной страницы -->
     {% block css %}
 
