--- a/goods/templates/goods/catalog.html
+++ b/goods/templates/goods/catalog.html
@@ -97,9 +97,7 @@
 {#            Если нет предыдущих страниц, то включаем класс "disabled"#}
             <li class="page-item {% if not goods.has_previous %}disabled{% endif %}">
 {#                Формируем ссылку на предыдущую страницу, если она есть#}
-                <a class="page-link" href="{% if goods.has_previous %}
-                    {% url 'catalog:index' slug_url goods.previous_page_number %}
-                    {% else %}
+                <a class="page-link" href="{% if goods.has_previous %}?page={{ goods.previous_page_number }}{% else %}
                         #
                 {% endif %} ">Назад</a>
             </li>
@@ -109,7 +107,7 @@
                 {% if page >= goods.number|add:-2 and page <= goods.number|add:2 %}
                     {#            Если это текущая страница, то включаем класс "active"#}
                     <li class="page-item {% if goods.number == page %} active {% endif %}">
-                        <a class="page-link" href="{% url 'catalog:index' slug_url page %}">{{ page }}</a>
+                        <a class="page-link" href="?page={{ page }}">{{ page }}</a>
                     </li>
                 {% endif %}
             {% endfor %}
@@ -117,9 +115,7 @@
 {#            Если нет следующих страниц, то включаем класс "disabled"#}
             <li class="page-item {% if not goods.has_next %}disabled{% endif %}">
 {#                Формируем ссылку на предыдущую страницу, если она есть#}
-                <a class="page-link" href="{% if goods.has_next %}
-                    {% url 'catalog:index' slug_url goods.next_page_number %}
-                    {% else %}
+                <a class="page-link" href="{% if goods.has_next %}?page={{ goods.next_page_number }}{% else %}
                         #
                 {% endif %} ">Следующая</a>
             </li>
