--- a/goods/templates/goods/catalog.html
+++ b/goods/templates/goods/catalog.html
@@ -1,5 +1,6 @@
 {% extends 'main/base.html' %}
 {% load static %}
+{% load goods_tags %}
 
 {% block content %}
     <!-- Контент на странице -->
@@ -12,11 +13,11 @@
                 Фильтры
             </button>
 
-            <form action="" method="get" class="dropdown-menu bg-dark" data-bs-theme="dark">
+            <form action="{% url "catalog:index" slug_url %}" method="get" class="dropdown-menu bg-dark" data-bs-theme="dark">
                 <div class="form-check text-white mx-3">
                     <input class="form-check-input" type="checkbox" name="on_sale" id="flexCheckDefault"
-                           value="on">
-                    <input type="hidden" name="q" value="request.GET.q">
+                           value="on" {% if request.GET.on_sale == 'on' %} checked {% endif %}>
+{#                    <input type="hidden" name="q" value="request.GET.q">#}
                     <label class="form-check-label" for="flexCheckDefault">
                         Товары по акции
                     </label>
@@ -24,21 +25,24 @@
                 <p class="text-white mx-3 mt-3">Сортировать:</p>
                 <div class="form-check text-white mx-3">
                     <input class="form-check-input" type="radio" name="order_by" id="flexRadioDefault1"
-                           value="default" checked>
+                           value="default"
+                           {% if not request.GET.order_by or request.GET.order_by == 'default' %} checked {% endif %}>
                     <label class="form-check-label" for="flexRadioDefault1">
                         По умолчанию
                     </label>
                 </div>
                 <div class="form-check text-white mx-3">
                     <input class="form-check-input" type="radio" name="order_by" id="flexRadioDefault2"
-                           value="price">
+                           value="price"
+                            {% if request.GET.order_by == 'price' %} checked {% endif %}>
                     <label class="form-check-label" for="flexRadioDefault2">
                         От дешевых к дорогим
                     </label>
                 </div>
                 <div class="form-check text-white mx-3">
                     <input class="form-check-input" type="radio" name="order_by" id="flexRadioDefault3"
-                           value="-price">
+                           value="-price"
+                            {% if request.GET.order_by == '-price' %} checked {% endif %}>
                     <label class="form-check-label" for="flexRadioDefault3">
                         От дорогих к дешевым
                     </label>
@@ -97,9 +101,7 @@
 {#            Если нет предыдущих страниц, то включаем класс "disabled"#}
             <li class="page-item {% if not goods.has_previous %}disabled{% endif %}">
 {#                Формируем ссылку на предыдущую страницу, если она есть#}
-                <a class="page-link" href="{% if goods.has_previous %}?page={{ goods.previous_page_number }}{% else %}
-                        #
-                {% endif %} ">Назад</a>
+                <a class="page-link" href="{% if goods.has_previous %}?{% change_params page=goods.previous_page_number %}{% else %}#{% endif %} ">Назад</a>
             </li>
 {#            Перебираем все доступные страницы в этой категории#}
             {% for page in goods.paginator.page_range %}
@@ -107,7 +109,7 @@
                 {% if page >= goods.number|add:-2 and page <= goods.number|add:2 %}
                     {#            Если это текущая страница, то включаем класс "active"#}
                     <li class="page-item {% if goods.number == page %} active {% endif %}">
-                        <a class="page-link" href="?page={{ page }}">{{ page }}</a>
+                        <a class="page-link" href="?{% change_params page=page %}">{{ page }}</a>
                     </li>
                 {% endif %}
             {% endfor %}
@@ -115,9 +117,7 @@
 {#            Если нет следующих страниц, то включаем класс "disabled"#}
             <li class="page-item {% if not goods.has_next %}disabled{% endif %}">
 {#                Формируем ссылку на предыдущую страницу, если она есть#}
-                <a class="page-link" href="{% if goods.has_next %}?page={{ goods.next_page_number }}{% else %}
-                        #
-                {% endif %} ">Следующая</a>
+                <a class="page-link" href="{% if goods.has_next %}?{% change_params page=goods.next_page_number %}{% else %}#{% endif %} ">Следующая</a>
             </li>
         </ul>
     </nav>
