--- a/goods/templates/goods/catalog.html
+++ b/goods/templates/goods/catalog.html
@@ -13,7 +13,9 @@
                 Фильтры
             </button>
 
-            <form action="{% if request.GET.q %}{% url 'catalog:search' %}{% else %}{% url "catalog:index" slug_url %} {% endif %}" method="get" class="dropdown-menu bg-dark" data-bs-theme="dark">
+            <form action="
+                    {% if request.GET.q %}{% url 'catalog:search' %}{% else %}{% url "catalog:index" slug_url %} {% endif %}"
+                  method="get" class="dropdown-menu bg-dark" data-bs-theme="dark">
                 <div class="form-check text-white mx-3">
                     <input class="form-check-input" type="checkbox" name="on_sale" id="flexCheckDefault"
                            value="on" {% if request.GET.on_sale == 'on' %} checked {% endif %}>
@@ -28,7 +30,7 @@
                 <div class="form-check text-white mx-3">
                     <input class="form-check-input" type="radio" name="order_by" id="flexRadioDefault1"
                            value="default"
-                           {% if not request.GET.order_by or request.GET.order_by == 'default' %} checked {% endif %}>
+                            {% if not request.GET.order_by or request.GET.order_by == 'default' %} checked {% endif %}>
                     <label class="form-check-label" for="flexRadioDefault1">
                         По умолчанию
                     </label>
@@ -54,75 +56,159 @@
         </div>
 
         {#Перебираем продукты в каталоге#}
-        {% if not goods %}
-            <div>
-                <p class="card-text"><strong>Товары в данной категории временно закончились.</strong></p>
-            </div>
-        {% else %}
-            {% for product in goods %}
-                <!-- Карта товара -->
-                <div class="col-lg-4 col-md-6 p-4">
-                    <div class="card border-primary rounded custom-shadow">
-    {#                    Проверка, если нет изображения для какого-то товара#}
-                        {% if product.image %}
-                            <img src="{{ product.image.url }}" class="card-img-top" alt="{{ product.name }}">
-                        {% else  %}
-                            <img src="{% static 'deps/images/Not found image.png' %}" class="card-img-top" alt="...">
-                        {% endif %}
-                        <div class="card-body">
-    {#                        Дополнительный параметр для тега url - product.slug, чтобы переход был на нужный товар#}
-                            <a href="{% url 'catalog:product' product.slug %}">
-                                <p class="card-title">{{ product.name }}</p>
-                            </a>
-                            <p class="card-text text-truncate">{{ product.description|truncatechars:35 }}</p>
-    {#                        вызываем метод display_id для отображения id товара#}
-                            <p class="product_id">id: {{ product.display_id }}</p>
-                            <div class="d-flex justify-content-between">
-    {#                            Проверяем есть ли скидка на товар#}
-                                {% if product.discount %}
-                                    <p><s>{{ product.price }}</s> $</p>
-                                    <p><strong> {{ product.sell_price }} $</strong></p>
-                                    <span class="badge bg-warning text-dark">Скидка {{ product.discount }} %</span>
-                                {% else  %}
-                                    <p><strong>{{ product.price }} $</strong></p>
-                                {% endif %}
-                                <a href="#" class="btn add-to-cart">
-                                    <img class="mx-1" src="{% static "deps/icons/cart-plus.svg" %}" alt="Catalog Icon"
-                                        width="32" height="32">
+        {% if request.GET.q %}
+                <h3 class="mt-4">Результаты поиска по запросу {{ request.GET.q }}</h3>
+            {% if not goods %}
+                <h2 class="mt-4">По запросу ничего не найдено</h2>
+            {% else %}
+                {% for product in goods %}
+                    <!-- Карта товара -->
+                    <div class="col-lg-4 col-md-6 p-4">
+                        <div class="card border-primary rounded custom-shadow">
+                            {#                    Проверка, если нет изображения для какого-то товара#}
+                            {% if product.image %}
+                                <img src="{{ product.image.url }}" class="card-img-top" alt="{{ product.name }}">
+                            {% else %}
+                                <img src="{% static 'deps/images/Not found image.png' %}" class="card-img-top" alt="...">
+                            {% endif %}
+                            <div class="card-body">
+                                {#                        Дополнительный параметр для тега url - product.slug, чтобы переход был на нужный товар#}
+                                {#                        ссли есть headline (для имени товара), bodyline (описание) поле у объекта, то выводим его имя с подсветкой#}
+                                {#                        выключаем параметр autoescape, чтобы вместо html-разметки отображались стили#}
+                                <a href="{% url 'catalog:product' product.slug %}">
+                                    <p class="card-title">
+                                        {% autoescape off %}
+                                            {% if product.headline %}
+                                                {{ product.headline }}
+                                            {% else %}
+                                                {{ product.name }}
+                                            {% endif %}
+                                        {% endautoescape %}
+                                    </p>
                                 </a>
+                                <p class="card-text text-truncate">
+                                    {% autoescape off %}
+                                        {% if product.bodyline %}
+                                            {{ product.bodyline|truncatechars:100 }}
+                                        {% else %}
+                                            {{ product.description|truncatechars:35 }}
+                                        {% endif %}
+                                    {% endautoescape %}
+                                </p>
+                                {#                        вызываем метод display_id для отображения id товара#}
+                                <p class="product_id">id: {{ product.display_id }}</p>
+                                <div class="d-flex justify-content-between">
+                                    {#                            Проверяем есть ли скидка на товар#}
+                                    {% if product.discount %}
+                                        <p><s>{{ product.price }}</s> $</p>
+                                        <p><strong> {{ product.sell_price }} $</strong></p>
+                                        <span class="badge bg-warning text-dark">Скидка {{ product.discount }} %</span>
+                                    {% else %}
+                                        <p><strong>{{ product.price }} $</strong></p>
+                                    {% endif %}
+                                    <a href="#" class="btn add-to-cart">
+                                        <img class="mx-1" src="{% static "deps/icons/cart-plus.svg" %}" alt="Catalog Icon"
+                                             width="32" height="32">
+                                    </a>
+                                </div>
                             </div>
                         </div>
                     </div>
+                {% endfor %}
+            {% endif %}
+        {% else %}
+            {% if not goods %}
+                <div>
+                    <p class="card-text"><strong>Товары в данной категории временно закончились.</strong></p>
                 </div>
-            {% endfor %}
+            {% else %}
+                {% for product in goods %}
+                        <!-- Карта товара -->
+                        <div class="col-lg-4 col-md-6 p-4">
+                            <div class="card border-primary rounded custom-shadow">
+                                {#                    Проверка, если нет изображения для какого-то товара#}
+                                {% if product.image %}
+                                    <img src="{{ product.image.url }}" class="card-img-top" alt="{{ product.name }}">
+                                {% else %}
+                                    <img src="{% static 'deps/images/Not found image.png' %}" class="card-img-top" alt="...">
+                                {% endif %}
+                                <div class="card-body">
+                                    {#                        Дополнительный параметр для тега url - product.slug, чтобы переход был на нужный товар#}
+                                    {#                        ссли есть headline (для имени товара), bodyline (описание) поле у объекта, то выводим его имя с подсветкой#}
+                                    {#                        выключаем параметр autoescape, чтобы вместо html-разметки отображались стили#}
+                                    <a href="{% url 'catalog:product' product.slug %}">
+                                        <p class="card-title">
+                                            {% autoescape off %}
+                                                {% if product.headline %}
+                                                    {{ product.headline }}
+                                                {% else %}
+                                                    {{ product.name }}
+                                                {% endif %}
+                                            {% endautoescape %}
+                                        </p>
+                                    </a>
+                                    <p class="card-text text-truncate">
+                                        {% autoescape off %}
+                                            {% if product.bodyline %}
+                                                {{ product.bodyline|truncatechars:100 }}
+                                            {% else %}
+                                                {{ product.description|truncatechars:35 }}
+                                            {% endif %}
+                                        {% endautoescape %}
+                                    </p>
+                                    {#                        вызываем метод display_id для отображения id товара#}
+                                    <p class="product_id">id: {{ product.display_id }}</p>
+                                    <div class="d-flex justify-content-between">
+                                        {#                            Проверяем есть ли скидка на товар#}
+                                        {% if product.discount %}
+                                            <p><s>{{ product.price }}</s> $</p>
+                                            <p><strong> {{ product.sell_price }} $</strong></p>
+                                            <span class="badge bg-warning text-dark">Скидка {{ product.discount }} %</span>
+                                        {% else %}
+                                            <p><strong>{{ product.price }} $</strong></p>
+                                        {% endif %}
+                                        <a href="#" class="btn add-to-cart">
+                                            <img class="mx-1" src="{% static "deps/icons/cart-plus.svg" %}" alt="Catalog Icon"
+                                                 width="32" height="32">
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    {% endfor %}
+            {% endif %}
         {% endif %}
     </div>
     <!-- Пагинация -->
-    <nav aria-label="Page navigation example">
-        <ul class="pagination justify-content-center my-4 custom-shadow d-flex">
-{#            Если нет предыдущих страниц, то включаем класс "disabled"#}
-            <li class="page-item {% if not goods.has_previous %}disabled{% endif %}">
-{#                Формируем ссылку на предыдущую страницу, если она есть#}
-                <a class="page-link" href="{% if goods.has_previous %}?{% change_params page=goods.previous_page_number %}{% else %}#{% endif %} ">Назад</a>
-            </li>
-{#            Перебираем все доступные страницы в этой категории#}
-            {% for page in goods.paginator.page_range %}
-{#                Применяем фильтр (добавляем 2), отображаем максимум по две страницы справа или слева#}
-                {% if page >= goods.number|add:-2 and page <= goods.number|add:2 %}
-                    {#            Если это текущая страница, то включаем класс "active"#}
-                    <li class="page-item {% if goods.number == page %} active {% endif %}">
-                        <a class="page-link" href="?{% change_params page=page %}">{{ page }}</a>
-                    </li>
-                {% endif %}
-            {% endfor %}
+    {% if goods %}
+        <nav aria-label="Page navigation example">
+            <ul class="pagination justify-content-center my-4 custom-shadow d-flex">
+                {#            Если нет предыдущих страниц, то включаем класс "disabled"#}
+                <li class="page-item {% if not goods.has_previous %}disabled{% endif %}">
+                    {#                Формируем ссылку на предыдущую страницу, если она есть#}
+                    <a class="page-link" href="{% if goods.has_previous %}?
+                        {% change_params page=goods.previous_page_number %}{% else %}#{% endif %} ">Назад</a>
+                </li>
+                {#            Перебираем все доступные страницы в этой категории#}
+                {% for page in goods.paginator.page_range %}
+                    {#                Применяем фильтр (добавляем 2), отображаем максимум по две страницы справа или слева#}
+                    {% if page >= goods.number|add:-2 and page <= goods.number|add:2 %}
+                        {#            Если это текущая страница, то включаем класс "active"#}
+                        <li class="page-item {% if goods.number == page %} active {% endif %}">
+                            <a class="page-link" href="?{% change_params page=page %}">{{ page }}</a>
+                        </li>
+                    {% endif %}
+                {% endfor %}
 
-{#            Если нет следующих страниц, то включаем класс "disabled"#}
-            <li class="page-item {% if not goods.has_next %}disabled{% endif %}">
-{#                Формируем ссылку на предыдущую страницу, если она есть#}
-                <a class="page-link" href="{% if goods.has_next %}?{% change_params page=goods.next_page_number %}{% else %}#{% endif %} ">Следующая</a>
-            </li>
-        </ul>
-    </nav>
+                {#            Если нет следующих страниц, то включаем класс "disabled"#}
+                <li class="page-item {% if not goods.has_next %}disabled{% endif %}">
+                    {#                Формируем ссылку на предыдущую страницу, если она есть#}
+                    <a class="page-link" href="{% if goods.has_next %}?
+                        {% change_params page=goods.next_page_number %}{% else %}#{% endif %} ">Следующая</a>
+                </li>
+            </ul>
+        </nav>
+    {% endif %}
 {% endblock %}
 
 {% block footer %}
