Templates for users app added

--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -1,5 +1,5 @@
 {#Указываем какой общий шаблон мы будем использовать для каждой страницы#}
-{% extends 'main/base.html' %}
+{% extends 'base.html' %}
 {#Добавляем статику#}
 {% load static %}
 
