--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -1,5 +1,5 @@
 {#Указываем какой общий шаблон мы будем использовать для каждой страницы#}
-{% extends 'main/base.html' %}
+{% extends 'base.html' %}
 {% load static %}
 
 {#Подключаем css-стили для footer#}
