--- a/templates/base.html
+++ b/templates/base.html
@@ -192,6 +192,7 @@
             </div>
             <div class="col-lg-10">
                 <!-- Контент на странице -->
+                {% include 'includes/notifications.html' %}
                 {% block content %}
 
                 {% endblock %}
