--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -8,15 +8,43 @@
             <div class="row justify-content-center">
                 <div class="col-md-6 bg-white p-4 mb-4 mx-3 rounded custom-shadow">
                     <h2 class="text-center mb-4">Авторизация</h2>
-                    <form>
+{#                    при post запросе все данные из input-тегов отправляются не в виде url, а в виде словаря, который шифруется и его не видно#}
+                    <form action="{% url 'user:login' %}" method="post">
+{#                        подключаем CSRF-токен (нужен для POST-запросов для защиты от подделки, чтобы убедиться, что данные отправил именно этот пользователь)#}
+                        {% csrf_token %}
+
                         <div class="mb-3">
-                            <label for="username" class="form-label">Имя пользователя</label>
-                            <input type="text" class="form-control" id="username" placeholder="Введите ваше имя пользователя" required>
+                            <label for="id_username" class="form-label">Имя пользователя</label>
+                            <input type="text" class="form-control"
+                                   value="{% if form.username.value %}{{ form.username.value }}{% endif %}"
+                                   name="username" id="id_username"
+                                   placeholder="Введите ваше имя пользователя"
+                                   required>
                         </div>
                         <div class="mb-3">
-                            <label for="password" class="form-label">Пароль</label>
-                            <input type="password" class="form-control" id="password" placeholder="Введите ваш пароль" required>
+                            <label for="id_password" class="form-label">Пароль</label>
+                            <input type="password" class="form-control"
+                                   name="password" id="id_password"
+                                   placeholder="Введите ваш пароль"
+                                   required>
                         </div>
+
+{#                        <div class="mb-3">#}
+{#                            <label for="{{ form.username.id_for_label }}" class="form-label">Имя пользователя</label>#}
+{#                            {{ form.username }}#}
+{#                        </div>#}
+{#                        <div class="mb-3">#}
+{#                            <label for="{{ form.password.id_for_label }}" class="form-label">Пароль</label>#}
+{#                            {{ form.password }}#}
+{#                        </div>#}
+{#                        <div class="mb-3">#}
+{#                            <label for="username" class="form-label">Имя пользователя</label>#}
+{#                            <input type="text" class="form-control" id="username" placeholder="Введите ваше имя пользователя" required>#}
+{#                        </div>#}
+{#                        <div class="mb-3">#}
+{#                            <label for="password" class="form-label">Пароль</label>#}
+{#                            <input type="password" class="form-control" id="password" placeholder="Введите ваш пароль" required>#}
+{#                        </div>#}
                         <button type="submit" class="btn btn-dark btn-block">Войти</button>
                     </form>
                     <div class="mt-3">
