Profile form, controller & notification are ready

--- a/users/templates/users/registration.html
+++ b/users/templates/users/registration.html
@@ -19,8 +19,8 @@
                                     {% csrf_token %}
                                     <div class="row">
                                         <div class="col-md-6 mb-3">
-                                            <label for="id_firstName" class="form-label">Имя*</label>
-                                            <input type="text" class="form-control" id="id_firstName"
+                                            <label for="id_first_name" class="form-label">Имя*</label>
+                                            <input type="text" class="form-control" id="id_first_name"
                                                    value="{% if form.first_name.value %}{{ form.first_name.value }}{% endif %}"
                                                    name="first_name"
                                                 placeholder="Введите ваше имя" required>
@@ -31,8 +31,8 @@
                                                 {% endif %}
                                         </div>
                                         <div class="col-md-6 mb-3">
-                                            <label for="id_lastName" class="form-label">Фамилия*</label>
-                                            <input type="text" class="form-control" id="id_lastName"
+                                            <label for="id_last_name" class="form-label">Фамилия*</label>
+                                            <input type="text" class="form-control" id="id_last_name"
                                                     value="{% if form.last_name.value %}{{ form.last_name.value }}{% endif %}"
                                                    name="last_name"
                                                 placeholder="Введите вашу фамилию" required>
