Add to cart view, refactor included cart templates

--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="{% static 'deps/css/my_footer_css.css' %}">
 {% endblock %}
 
+{% block modal_cart %}
+    {% include 'includes/cart_button.html' %}
+{% endblock %}
+
 {#Добавляем контент для главной страницы#}
 {% block content %}
     <div class="mt-5 pt-5 bg-white custom-shadow rounded">
