--- a/goods/templates/goods/product.html
+++ b/goods/templates/goods/product.html
@@ -1,6 +1,10 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block modal_cart %}
+    {% include 'includes/cart_button.html' %}
+{% endblock %}
+
 {% block content %}
     <!-- Контент на странице -->
     <div class="container mt-5">
@@ -37,7 +41,7 @@
                 <p class="card-text">Цена: <strong>{{ product.sell_price }} $</strong></p>
                 <h5 class="card-title">{{ product.name }}</h5>
                 <p class="card-text">{{ product.description }}</p>
-                <a href="#" class="btn btn-dark add-to-cart">Добавить в корзину</a>
+                <a href="{% url 'cart:cart_add' product.slug%}" class="btn btn-dark add-to-cart">Добавить в корзину</a>
             </div>
         </div>
     </div>
