--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,6 +1,7 @@
 {#Указываем какой общий шаблон мы будем использовать для каждой страницы#}
 {% extends 'base.html' %}
 {% load static %}
+{% load carts_tags %}
 
 {% block content %}
     <div class="row">
@@ -81,6 +82,7 @@
                     </div>
                 </div>
                 <!-- Корзина -->
+                {% user_carts request as carts %}
                 <div class="col-md-7">
                     <div class=" bg-white p-4 mb-4 mx-2 rounded custom-shadow">
                         <h3 class="text-center mb-4">Корзина</h3>
