--- a/users/templates/users/registration.html
+++ b/users/templates/users/registration.html
@@ -2,6 +2,11 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{#вставляем кнопку с корзиной#}
+{% block modal_cart %}
+    {% include 'includes/cart_button.html' %}
+{% endblock %}
+
 {% block content %}
     <div class="container">
         <div class="row mt-1">
